--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -13,6 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -35,7 +42,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+.btn {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -46,13 +53,42 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.btn:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+.btn:focus,
+.btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.play {
+  background-color: #535bf2;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.play:hover {
+  background-color: #646cff;
+}
+
+.card-logo {
+  height: 10em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.card-logo:hover {
+  filter: drop-shadow(0 0 2em #bfc0d4aa);
+  cursor: pointer;
+}
+
+/* @keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -62,7 +98,17 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  .btn {
     background-color: #f9f9f9;
   }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  /* .card-logo {
+    animation: logo-spin infinite 30s linear;
+  } */
+}
+
+.card-logo {
+  padding: 2em;
 }
