Added react router and moved splash page from app to separate component.  Also added a GamePage component for the main game

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -63,11 +63,13 @@ h1 {
 
 .play {
   background-color: #535bf2;
+  color: white;
   transition: background-color 0.3s ease-in-out;
 }
 
 .play:hover {
   background-color: #646cff;
+  color: white;
 }
 
 .card-logo {
