--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -132,6 +132,10 @@ h1 {
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.25);
 }
 
+.flip {
+  transform: rotateY(180deg);
+}
+
 .card:hover {
   transform: scale(0.99);
   filter: drop-shadow(0 0 2em var(--purplish));
