--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -21,12 +21,12 @@
   --poke-red: #ef5350;
   --poke-yellow: #feca1b;
   --poke-yellow-hover: #dba91f;
+  --poke-brown: #4e4742;
 }
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -70,28 +70,31 @@ h1 {
 }
 
 /* Landing  */
-.play {
+.play,
+.back {
   background-color: var(--poke-yellow);
   color: var(--dark-bg);
   transition: background-color 0.3s ease-in-out;
+  will-change: filter;
 }
 
-.play:hover {
+.play:hover,
+.back:hover {
   background-color: var(--poke-yellow-hover);
   color: var(--dark-bg);
+  filter: drop-shadow(0 0 2em var(--white));
 }
 
 .title {
   color: var(--poke-red);
 }
 
-.card-logo {
-  height: 10em;
-  padding: 1.5em;
+.pikachu-logo {
+  height: 15em;
   will-change: transform;
   transition: transform 300ms, filter 300ms;
 }
-.card-logo:hover {
+.pikachu-logo:hover {
   transform: scale(0.99);
   filter: drop-shadow(0 0 2em var(--white));
   cursor: pointer;
@@ -123,34 +126,36 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--white);
+  background-color: var(--poke-brown);
   border-radius: 8px;
-  padding: 2em;
+  padding: 0.5em;
   margin: 0 auto;
-  max-width: 400px;
-  gap: 2em;
+  width: 150px;
+  /* gap: 10em; */
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.25);
 }
 
-.flip {
-  transform: rotateY(180deg);
+.card-img {
+  max-width: 125px;
+  height: 125px;
+}
+
+@keyframes shuffle {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.card-shuffle-animation {
+  animation: shuffle 0.7s ease forwards;
 }
 
 .card:hover {
-  transform: scale(0.99);
-  filter: drop-shadow(0 0 2em var(--purplish));
+  filter: drop-shadow(0 0 2em var(--light-bg));
   cursor: pointer;
-}
-
-.card:active {
-  transform: scale(0.98);
-  filter: drop-shadow(0 0 2em var(--purplish));
-}
-
-.card-img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -170,8 +175,4 @@ h1 {
   /* .card-logo {
     animation: logo-spin infinite 30s linear;
   } */
-}
-
-.card-logo {
-  padding: 2em;
 }
