--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -126,22 +126,35 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  perspective: 1000px;
   background-color: var(--poke-brown);
   border-radius: 8px;
-  padding: 0.5em;
-  margin: 0 auto;
-  width: 150px;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.25);
 }
 
-.card-img {
-  max-width: 125px;
-  height: 125px;
+.card-inner {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.75s ease;
+  animation: shuffle 0.75s ease forwards;
 }
 
 @keyframes shuffle {
   0% {
     transform: rotateY(0deg);
+  }
+  25% {
+    transform: rotateY(90deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  75% {
+    transform: rotateY(270deg);
   }
   100% {
     transform: rotateY(360deg);
@@ -149,7 +162,61 @@ h1 {
 }
 
 .card-shuffle-animation {
-  animation: shuffle 0.5s ease forwards;
+  animation: shuffle 0.75s ease forwards;
+}
+
+.card-front,
+.card-back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-img {
+  max-width: 125px;
+  height: 125px;
+  animation: hideShowImage 0.75s ease forwards;
+}
+
+@keyframes hideShowImage {
+  100% {
+    visibility: visible;
+  }
+  0%,
+  25%,
+  50%,
+  75% {
+    visibility: hidden;
+  }
+}
+
+.card-front {
+  background-color: var(--poke-brown);
+  border-radius: 8px;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  background-color: var(--poke-brown);
+  opacity: 0;
+  border-radius: 8px;
+  animation: showBackground 0.5s ease forwards;
+}
+
+@keyframes showBackground {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .card:hover {
