--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -450,15 +450,21 @@ h1 {
 
   .card {
     width: 100px;
-    height: 150px;
+    height: 75px;
   }
 
   .card-img {
-    max-width: 80px;
-    height: 80px;
+    max-width: 70px;
+    height: 70px;
   }
 
   .scores {
-    font-size: 0.7em;
+    font-size: 0.6em;
+  }
+
+  .footer {
+    font-size: 0.8em;
+    align-items: flex-start;
+    height: 70px;
   }
 }
